may require change of parentheses:

  setloop       |> Simplifier.set_loop
  addloop       |> Simplifier.add_loop
  delloop       |> Simplifier.del_loop
  setSSolver    |> Simplifier.set_safe_solver
  addSSolver    |> Simplifier.add_safe_solver
  setSolver     |> Simplifier.set_unsafe_solver
  addSolver     |> Simplifier.add_unsafe_solver


*** System ***

* System option "record_theories" tells "isabelle build" to record
intermediate theory commands and results, at the cost of approx. 5 times
larger ML heap images. This allows to retrieve fine-grained semantic
information later on, using Thy_Info.get_theory_segments or
Thy_Info.get_theory_elements in Isabelle/ML.

* The Z Garbage Collector (ZGC) of Java 21 is now used by default (see
also https://wiki.openjdk.org/display/zgc). This should work uniformly
on all platforms, but requires a reasonably new version of Windows
(Windows 10 or Windows Server 2019).

* SSH connections allow both bash and zsh as remote shell. This is
particularly important for macOS, where zsh is the default user shell.

* Isabelle/Scala supports SVG via the "jsvg" library
(com.github.weisj.jsvg.SVGDocument), as well as the "flatlaf-extras"
library (com.formdev.flatlaf.extras.FlatSVGIcon).



New in Isabelle2025 (March 2025)
--------------------------------

*** General ***

* The Simplifier now supports special "congprocs", using keyword
'congproc' or 'weak_congproc' in the 'simproc_setup' command (or ML
antiquotation of the same name). See also
~~/src/HOL/Imperative_HOL/ex/Congproc_Ex.thy for further explanations
and examples.

* The attribute "cong_format" produces the internal format of Simplifier
"cong" rules, notably for congproc implementations.


*** Inner syntax --- the term language ***

* Markup for free variables now works uniformly for parsing and
printing, concerning declaration scopes and highlighting of undeclared
variables.

* Syntax translations now work in a local theory context, notably within
"bundle begin ... end".
