@@ -103,13 +103,6 @@ case "$ISABELLE_PLATFORM_FAMILY" in
     ;;
 esac
 
-#ML system identifier
-if [ -z "$ML_PLATFORM" ]; then
-  ML_IDENTIFIER="$ML_SYSTEM"
-else
-  ML_IDENTIFIER="${ML_SYSTEM}_${ML_PLATFORM}"
-fi
-
 #enforce ISABELLE_OCAMLFIND
 if [ -d "$ISABELLE_OPAM_ROOT/$ISABELLE_OCAML_VERSION/bin" ]; then
   ISABELLE_OCAMLFIND="$ISABELLE_HOME/lib/scripts/ocamlfind"
